--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-transparent fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"> <img src="../resources/img/mountains.ico" alt="" width="50px" height="50px" text-white>Villa Pehuenia</a>
+          <a class="navbar-brand" href="#"> <img src="./resources/img/mountains.ico" alt="" width="50px" height="50px" text-white>Villa Pehuenia</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
