--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="../index.html">Inicio</a>
+                    <a class="nav-link" href="./index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./pages/turismo.html">Turismo</a>
